# CatalogManager

./: .flake8  README.md  data_loader.py  main.py  models.py  pyproject.toml  test_data_loader.py  test_models.py
PythonProjects/PyCharmProjects/1/src/: data_loader.py  main.py  models.py
PythonProjects/PyCharmProjects/1/tests/: test_data_loader.py  test_models.py
PythonProjects/PyCharmProjects/BANK/: .env_template  README.md  pyproject.toml  requirements.txt
PythonProjects/PyCharmProjects/BANK/src/: main.py  reports.py  services.py  utils.py  views.py
PythonProjects/PyCharmProjects/BANK/tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
src/: json_loader.py  main.py  models.py
tests/: test_category.py  test_json_loader.py  test_models.py  test_products.py
